--- a/style.css
+++ b/style.css
@@ -1,37 +1,51 @@
 body {
+  position: relative;
   background-color: #352f44;
   color: pink;
 }
 
 .main-container {
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid pink;
+  height: 600px;
+  width: 600px;
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.main-div-inside {
+  height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-label {
-  display: inline-block;
-  width: 150px;
+  justify-content: space-around;
+  margin-top: 50px;
 }
 
 input {
-  width: 200px;
+  width: 300px;
   border-radius: 5px;
   height: 25px;
 }
 
+.input-container {
+  margin-top: 60px;
+}
+
 button {
   display: block;
-  margin-top: 25px;
+  margin-top: 10px;
   padding: 5px;
-  width: 100px;
+  width: 150px;
   border-radius: 5px;
   border: none;
   background-color: #b9b4c7;
 }
 
 p {
-  font-size: x-large;
-  margin-top: 100px;
+  font-size: large;
+  margin-top: 10px;
   color: palevioletred;
 }
