--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 .main-container {
   font-family: Arial, Helvetica, sans-serif;
-  border: 1px solid pink;
+  border: 1px solid rgb(195, 136, 145);
   height: 600px;
   width: 600px;
   border-radius: 10px;
